# Challenge_final

./: .gitignore  README.md  idees.md  main.py  pyproject.toml  regression_results_hauts_de_france.csv  test.py  test_projet1.ipynb  test_projet2.ipynb
