[project]
name = "challenge-final"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "label-studio>=1.22.0",
    "opencv-python>=4.13.0.90",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "streamlit>=1.53.1",
    "ultralytics>=8.4.11",
]
